[package]
name = "everust"
version = "0.1.1"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
description = "Evaluates rust code."
license = "MIT"
repository = "https://github.com/stephaneyfx/everust.git"
keywords = ["evaluate", "interpret", "interpreter", "repl"]

[dependencies]
tempdir = "0.3.5"
